<resources>
    <string name="app_name">FakeStoreApp</string>
    <string name="please_wait">Please wait for Fake Store to load</string>
    <string name="no_internet">No internet try when you have internet</string>
    <string name="nav_map">Map</string>
    <string name="nav_about">About</string>
    <string name="nav_shop_items">Shop items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title\n</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="login">Login\n</string>
    <string name="register">Register\n</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="outOf5">/5</string>
    <string name="rating">Rating:</string>
    <string name="update_rating">update rating</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>