<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailsActivity">

    <LinearLayout
        android:padding="@dimen/itemsPadding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            tools:src="@drawable/flat_about"
            android:id="@+id/ivItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detailsImageheight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detailsMarginTop">

            <TextView
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
<!--
            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy"/>

            <ImageView
                android:id="@+id/ivRead"
                tools:src="@drawable/red_flag"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            -->

        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle"
            tools:text="Moja jakna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvPriceNumber"
            tools:text="trla baba lan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvDescription"
            tools:text="@tools:sample/lorem/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>